# pm_Kanban

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml
backend/: AGENTS.md  ai.py  database.py  main.py  pyproject.toml
backend/routes/: ai.py  ai_chat.py  kanban.py
backend/static/: index.html
backend/tests/: test_ai.py  test_database.py
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: login-test.ps1  package.json
frontend/src/app/: page.tsx
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/src/test/: setup.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
