[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Kanban board MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

